# eiptek3api

./: .gitignore  Makefile  README.md  pyproject.toml
eiptek3api/: __main__.py  api.py  stats.py
