[project]
name = "eiptek3api"
version = "0.0.8"
authors = [
  { name="Xavier Mitault", email="xavier.mitault@epitech.eu" },
]
dependencies = ["requests", "python-dateutil"]
description = "Small python package for https://eip-tek3.epitest.eu api"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Saverio976/eiptek3api"
Issues = "https://github.com/Saverio976/eiptek3api/issues/new/choose"

[project.scripts]
eiptek3api = "eiptek3api.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = [
  "eiptek3api"
]
